# snark-wrapper

./: Cargo.toml
.github/workflows/: basic_build.yaml
src/: lib.rs
src/implementations/: mod.rs  verifier_builder.rs
src/implementations/poseidon2/: mod.rs  transcript.rs  tree_hasher.rs
src/traits/: circuit.rs  mod.rs  pow.rs  transcript.rs  tree_hasher.rs
src/verifier/: first_step.rs  fri.rs  mod.rs  quotient_contributions.rs  utils.rs
src/verifier_structs/: allocated_proof.rs  allocated_queries.rs  allocated_vk.rs  challenges.rs  constants.rs  gate_evaluator.rs  mod.rs
